# uva-msc-thesis

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ChaosProbe_Presentation.pptx  Debugging.md  EXPERIMENT_LOOP.md  FIX_LOOP.md  LICENSE  PLAN.md  README.md  chaos-litmus-chaos-enable.yml  create_presentation.py  dashboard-admin.yaml  deep-research.md  infra-litmus-chaos-enable.yml  litmus-admin.yaml  main.bib  pod-delete.yaml  presentation_script.md  references.md  thesis.latex
chaosprobe/: IMPROVE.md  NEO4J_ANALYSIS.md  README.md  TECHNICAL.md  hosts.yaml  proxmox-setup.md  pyproject.toml
chaosprobe/chaosprobe/: __init__.py  cli.py  k8s.py
chaosprobe/chaosprobe/chaos/: __init__.py  engine.py  manifest.py  runner.py
chaosprobe/chaosprobe/collector/: __init__.py  result_collector.py
chaosprobe/chaosprobe/commands/: __init__.py  cleanup_cmd.py  cluster_cmd.py  compare_cmd.py  dashboard_cmd.py  delete_cmd.py  diff_cmd.py  doctor_cmd.py  export_cmd.py  graph_cmd.py  init_cmd.py  inspect_cmd.py  placement_cmd.py  power_cmd.py  probe_cmd.py  provision_cmd.py  recommend_cmd.py  report_cmd.py  run_cmd.py  shared.py  stats_cmd.py  status_cmd.py  summarize_cmd.py  visualize_cmd.py
chaosprobe/chaosprobe/config/: __init__.py  loader.py  topology.py  validator.py
chaosprobe/chaosprobe/graph/: __init__.py  analysis.py
chaosprobe/chaosprobe/loadgen/: __init__.py  runner.py
chaosprobe/chaosprobe/metrics/: anomaly_labels.py  base.py  cascade.py  collector.py  conntrack.py  endpointslice_sampler.py  endpointslices.py  latency.py  prometheus.py  recovery.py  remediation.py  reproducibility.py  resources.py  statistics.py  throughput.py  timeseries.py  utilization.py
chaosprobe/chaosprobe/orchestrator/: __init__.py  aggregation.py  diagnostics.py  portforward.py  preflight.py  probers.py  quiescence.py  readiness.py  recovery.py  run_phases.py  session.py  strategy_runner.py  timeout.py  v2_session.py
chaosprobe/chaosprobe/output/: __init__.py  charts.py  comparison.py  generator.py  ml_export.py  visualize.py
chaosprobe/chaosprobe/placement/: __init__.py  affinity_engine.py  dns_cache.py  fraction_solver.py  mutator.py  strategy.py
chaosprobe/chaosprobe/probes/: builder.py  templates.py
chaosprobe/chaosprobe/provisioner/: __init__.py  _setup_base.py  anomaly_injector.py  chaoscenter.py  chaoscenter_api.py  components.py  kubernetes.py  setup.py  vagrant.py
chaosprobe/chaosprobe/storage/: __init__.py  base.py  neo4j_reader.py  neo4j_store.py  neo4j_writer.py  sqlite.py
chaosprobe/chaosprobe/utils/: __init__.py
chaosprobe/docs/: index.md
chaosprobe/docs/explanation/: concepts.md  hypotheses.md  proposed-experiments.md  scope-of-claims.md
chaosprobe/docs/how-to/: add-a-rust-probe.md  analyze-results.md  reproducing-thesis-results.md  run-experiments.md  set-up-a-cluster.md  write-a-scenario.md
chaosprobe/docs/reference/: cli.md  configuration.md
chaosprobe/docs/tutorials/: getting-started.md
chaosprobe/examples/: README.md  example-summary.json
chaosprobe/manifests/: README.md  registry.yaml
chaosprobe/manifests/litmus/: rbac.yaml
chaosprobe/results/20260330-063020/: antagonistic-iter-1.json  antagonistic-iter-2.json  antagonistic-iter-3.json  baseline-iter-1.json  baseline-iter-2.json  baseline-iter-3.json  colocate-iter-1.json  colocate-iter-2.json  colocate-iter-3.json  random-iter-1.json  random-iter-2.json  random-iter-3.json  spread-iter-1.json  spread-iter-2.json  spread-iter-3.json
chaosprobe/results/20260330-075934/: antagonistic-iter-1.json  antagonistic-iter-2.json  antagonistic-iter-3.json  baseline-iter-1.json  baseline-iter-2.json  baseline-iter-3.json  colocate-iter-1.json  colocate-iter-2.json  colocate-iter-3.json  random-iter-1.json  random-iter-2.json  random-iter-3.json  spread-iter-1.json  spread-iter-2.json  spread-iter-3.json
chaosprobe/results/20260330-093534/: antagonistic-iter-1.json  antagonistic-iter-2.json  antagonistic-iter-3.json  baseline-iter-1.json  baseline-iter-2.json  baseline-iter-3.json  colocate-iter-1.json  colocate-iter-2.json  colocate-iter-3.json  random-iter-1.json  random-iter-2.json  random-iter-3.json  spread-iter-1.json  spread-iter-2.json  spread-iter-3.json
chaosprobe/results/20260330-111110/: antagonistic-iter-1.json  antagonistic-iter-2.json  antagonistic-iter-3.json  baseline-iter-1.json  baseline-iter-2.json  baseline-iter-3.json  colocate-iter-1.json  colocate-iter-2.json  (+7 more)
chaosprobe/scripts/: aa_block.py  apply_placement_map.py  archive_run.py  ax_aa_all6_variance.py  blast_radius.py  c1_h1_trend.py  c2_h3_anova.py  c3_h2_dns.py  campaign_status.py  contention_routes.py  cross_node_fraction.py  d3_slope_bands.py  deposit_zenodo.py  design_fix_analysis.py  distribution_charts.py  fault_taxonomy.py  h3_mechanism_outcome.py  h4_frontier.py  holm_family.py  m1b_gate.py  m2_aa_analysis.py  mechanism_metrics.py  node_drain_interaction.py  run_ax_aa_nodedrain.sh  run_c1_hotel_campaign.sh  run_c2_hotel_campaign.sh  run_c2_rr_campaign.sh  run_c3_dns_campaign.sh  run_c4_nodedrain_dose_campaign.sh  score_variance.py  scorecard.py  single_study_figures.py  thesis_figures.py  v2_h4_frontier.py
chaosprobe/tests/: __init__.py  conftest.py  test_aa_block.py  test_affinity_engine.py  test_aggregate_iterations.py  test_anomaly_injector.py  test_anomaly_labels.py  test_app_ready_timeout.py  test_apply_placement_map.py  test_archive_run.py  test_base.py  test_blast_radius.py  test_c1_h1_trend.py  test_c2_h3_anova.py  test_c3_h2_dns.py  test_campaign_status.py  test_cascade.py  test_chaos_runner_parse.py  test_chaoscenter.py  test_ci_overlap.py  test_cleanup_cmd.py  test_cliffs_delta.py  test_collector.py  test_compare_cmd.py  test_comparison.py  test_comparison_table.py  test_config.py  test_conntrack.py  test_contention_routes.py  test_cross_node_fraction.py  test_d3_slope_bands.py  test_diff_cmd.py  test_dns_cache.py  test_doctor_cmd.py  test_endpointslice_sampler.py  test_endpointslices.py  test_example_summary.py  test_export_cmd.py  test_extract_http_routes.py  test_fault_taxonomy.py  (+94 more)
(+235 files in other folders)
