[project]
name = "chaosprobe"
version = "0.1.0"
description = "A CLI tool for running LitmusChaos experiments on Kubernetes with AI-consumable output"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yvo Hu", email = "yvo.hu@student.uva.nl"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "kubernetes>=28.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "locust>=2.20.0",
    "matplotlib>=3.7.0",
    "neo4j>=5.0.0",
    "pyarrow>=12.0.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=0.6.21",
]

[project.scripts]
chaosprobe = "chaosprobe.cli:main"

[project.urls]
Homepage = "https://github.com/yhu02/uva-msc-thesis"
Repository = "https://github.com/yhu02/uva-msc-thesis"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chaosprobe"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
# `results/` holds runtime experiment outputs and ad-hoc re-aggregation
# scripts dropped into per-run directories; they are not part of the
# package source and must not be subjected to formatting.
extend-exclude = "/(results)/"

[tool.ruff]
line-length = 100
extend-exclude = ["results"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# HTML-template-heavy file: long lines are inside f-string HTML templates
# where breaking them either pollutes the rendered output or fights black.
"chaosprobe/output/visualize.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# Scoped gate: type-check the defender's analysis-CLI surface, the
# part that's been growing the most over the last 70+ PRs.  Cluster /
# run / visualize use untyped kubernetes / matplotlib APIs and need
# stub work before they can be added.  Run via `uv run mypy --strict-equality`
# against the files in this list (kept in sync with chaosprobe analysis CLI).
files = [
    "chaosprobe/commands/diff_cmd.py",
    "chaosprobe/commands/doctor_cmd.py",
    "chaosprobe/commands/export_cmd.py",
    "chaosprobe/commands/inspect_cmd.py",
    "chaosprobe/commands/power_cmd.py",
    "chaosprobe/commands/report_cmd.py",
    "chaosprobe/commands/stats_cmd.py",
    "chaosprobe/commands/summarize_cmd.py",
    # output/ — the schema-writing half of the analysis contract.
    # charts.py / visualize.py / ml_export.py rely on matplotlib /
    # pyarrow (untyped stubs); they need stub work first.
    "chaosprobe/output/__init__.py",
    "chaosprobe/output/comparison.py",
    "chaosprobe/output/generator.py",
    # graph/ — pure-Python Neo4j-read helpers consumed by stats /
    # report / blast-radius commands.  Driver imports are isolated to
    # the storage/ layer, so this directory itself doesn't pull in
    # neo4j or pyarrow.
    "chaosprobe/graph/__init__.py",
    "chaosprobe/graph/analysis.py",
    # metrics/ — anomaly + cascade helpers shipped today are pure.
    # statistics.py / collector.py / prometheus.py etc. still have
    # active mypy errors and need their own slice.
    "chaosprobe/metrics/anomaly_labels.py",
    "chaosprobe/metrics/cascade.py",
]
